trunk/Source/include/OpenGL1x.hpp


extern "C" void __stdcall glTexImage1D(unsigned target, int level, int internalformat, int width, int border, unsigned format, unsigned atype, void * pixels);

extern "C" void __stdcall glTexImage2D(unsigned target, int level, int internalformat, int width, int height, int border, unsigned format, unsigned atype, void * Pixels);

extern "C" void __stdcall glTexParameterf(unsigned target, unsigned pname, float param);

extern "C" void __stdcall glTexParameterfv(unsigned target, unsigned pname, System::PSingle params);

extern "C" void __stdcall glTexParameteri(unsigned target, unsigned pname, int param);

extern "C" void __stdcall glTexParameteriv(unsigned target, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glTexSubImage1D(unsigned target, int level, int xoffset, int width, unsigned format, unsigned atype, void * pixels);

extern "C" void __stdcall glTexSubImage2D(unsigned target, int level, int xoffset, int yoffset, int width, int height, unsigned format, unsigned atype, void * pixels);

extern "C" void __stdcall glViewport(int x, int y, int width, int height);

extern "C" void __stdcall glAccum(unsigned op, float value);

extern "C" void __stdcall glAlphaFunc(unsigned func, float ref);

extern "C" System::ByteBool __stdcall glAreTexturesResident(int n, Opengltokens::PGLuint Textures, Opengltokens::PGLboolean residences);

extern "C" void __stdcall glArrayElement(int i);

extern "C" void __stdcall glBegin(unsigned mode);

extern "C" void __stdcall glBitmap(int width, int height, float xorig, float yorig, float xmove, float ymove, void * bitmap);

extern "C" void __stdcall glCallList(unsigned list);

extern "C" void __stdcall glCallLists(int n, unsigned atype, void * lists);

extern "C" void __stdcall glClearAccum(float red, float green, float blue, float alpha);

extern "C" void __stdcall glClearIndex(float c);

extern "C" void __stdcall glClipPlane(unsigned plane, System::PDouble equation);

extern "C" void __stdcall glColor3b(System::Int8 red, System::Int8 green, System::Int8 blue);

extern "C" void __stdcall glColor3bv(Opengltokens::PGLbyte v);

extern "C" void __stdcall glColor3d(double red, double green, double blue);

extern "C" void __stdcall glColor3dv(System::PDouble v);

extern "C" void __stdcall glColor3f(float red, float green, float blue);

extern "C" void __stdcall glColor3fv(System::PSingle v);

extern "C" void __stdcall glColor3i(int red, int green, int blue);

extern "C" void __stdcall glColor3iv(Opengltokens::PGLint v);

extern "C" void __stdcall glColor3s(short red, short green, short blue);

extern "C" void __stdcall glColor3sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glColor3ub(System::Byte red, System::Byte green, System::Byte blue);

extern "C" void __stdcall glColor3ubv(System::PByte v);

extern "C" void __stdcall glColor3ui(unsigned red, unsigned green, unsigned blue);

extern "C" void __stdcall glColor3uiv(Opengltokens::PGLuint v);

extern "C" void __stdcall glColor3us(System::Word red, System::Word green, System::Word blue);

extern "C" void __stdcall glColor3usv(System::PWord v);

extern "C" void __stdcall glColor4b(System::Int8 red, System::Int8 green, System::Int8 blue, System::Int8 alpha);

extern "C" void __stdcall glColor4bv(Opengltokens::PGLbyte v);

extern "C" void __stdcall glColor4d(double red, double green, double blue, double alpha);

extern "C" void __stdcall glColor4dv(System::PDouble v);

extern "C" void __stdcall glColor4f(float red, float green, float blue, float alpha);

extern "C" void __stdcall glColor4fv(System::PSingle v);

extern "C" void __stdcall glColor4i(int red, int green, int blue, int alpha);

extern "C" void __stdcall glColor4iv(Opengltokens::PGLint v);

extern "C" void __stdcall glColor4s(short red, short green, short blue, short alpha);

extern "C" void __stdcall glColor4sv(short v);

extern "C" void __stdcall glColor4ub(System::Byte red, System::Byte green, System::Byte blue, System::Byte alpha);

extern "C" void __stdcall glColor4ubv(System::PByte v);

extern "C" void __stdcall glColor4ui(unsigned red, unsigned green, unsigned blue, unsigned alpha);

extern "C" void __stdcall glColor4uiv(Opengltokens::PGLuint v);

extern "C" void __stdcall glColor4us(System::Word red, System::Word green, System::Word blue, System::Word alpha);

extern "C" void __stdcall glColor4usv(System::PWord v);

extern "C" void __stdcall glColorMaterial(unsigned face, unsigned mode);

extern "C" void __stdcall glColorPointer(int size, unsigned atype, int stride, void * data);

extern "C" void __stdcall glCopyPixels(int x, int y, int width, int height, unsigned atype);

extern "C" void __stdcall glDeleteLists(unsigned list, int range);

extern "C" void __stdcall glDisableClientState(unsigned aarray);

extern "C" void __stdcall glDrawPixels(int width, int height, unsigned format, unsigned atype, void * pixels);